# DDGS

./: README.md  example.py  pyproject.toml  setup.py  test_train.py
csrc/: ext.cpp
csrc/include/: ddgs.hpp  ddgs_backward.h  ddgs_buffers.h  ddgs_forward.h  ddgs_global.h  mgs_dr.hpp
csrc/src/: ddgs.cpp  ddgs_backward.cu  ddgs_buffers.cu  ddgs_forward.cu  mgs_dr.cpp
ddgs/: __init__.py
mgs_diff_renderer/: __init__.py  ext.cpp
