[build-system]
requires = [
    "setuptools",
    "torch",
]
build-backend = "setuptools.build_meta"

[project]
name = "ddgs-py"
version = "0.0.1"
description = "Differentiable Renderer for Dynamic Gaussian Splats (dgs)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
	{name = "Daniel Elwell", email = "de@true3d.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/splatsdotcom/DDGS"
Repository = "https://github.com/splatsdotcom/DDGS"
Issues = "https://github.com/splatsdotcom/DDGS/issues"
